--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -20,6 +20,11 @@ h2 {
   }
 }
 
+hr {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 h3 {
   font-family: Poppins-SemiBoldItalic;
   font-size: 40px;
